# mcp-google-sheets-server-api

./: .env.example  .gitignore  CONFIGURACION.md  Dockerfile  README.md  README_CONFIGURADO.md  README_DUAL_MODE.md  SETUP.md  claude_config.json  client_example.py  docker-compose.yml  pyproject.toml  run_api_server.bat  run_api_server.sh  run_server.bat  test_auth.py
config/: api_keys.json.example
src/mcp_google_sheets/: server.py
src/mcp_google_sheets/api/: __init__.py  __main__.py  http_server.py
